Corregido el filtro por grupo de clientes en los listados de facturas, albaranes, pedidos y presupuestos.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -93,6 +93,7 @@
     "amount-without-discount": "Preis ohne Rabatt",
     "and": "and",
     "any": "Irgendein",
+    "any-group": "Cualquier grupo",
     "apache-module-not-found": "Apache module nicht gefunden",
     "apc-clear": "APC hat geklärt.",
     "apc-delete-key-item": "Element '0' von APC gelöscht",
@@ -1218,6 +1219,7 @@
     "recreate-system-integrity": "Systemintegrität wiederherstellen",
     "rectified-invoice": "Korrekturrechnung",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
+    "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Rectificativa",
     "rectifying-serie": "Korrekturserie",
     "redirect": "Redirección",
@@ -1591,6 +1593,7 @@
     "wildcard-title": "Platzhalter ersetbar durch Werte",
     "without-closure": "Ohne Abschluss",
     "without-domicile": "ohne Domizil",
+    "without-groups": "Sin grupo",
     "without-regularization": "Ohne Regulierung",
     "without-tax": "Ohne Steuer",
     "without-taxation": "Ohne Steuern",
