--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -93,6 +93,7 @@
     "amount-without-discount": "Amount without discount",
     "and": "and",
     "any": "Any",
+    "any-group": "Cualquier grupo",
     "apache-module-not-found": "Apache module not found: %module%",
     "apc-clear": "APC cleared.",
     "apc-delete-key-item": "Deleted element '%item%' from APC.",
@@ -1218,6 +1219,7 @@
     "recreate-system-integrity": "Recreate system integrity",
     "rectified-invoice": "Rectified invoice",
     "rectified-invoice-p": "Invoices are commercial documents and have a number of legal restrictions. They cannot be deleted or modified, only total or partial returns are allowed. Use this form to make a return of this invoice.",
+    "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Rectification",
     "rectifying-serie": "Rectifying serie",
     "redirect": "Redirect",
@@ -1591,6 +1593,7 @@
     "wildcard-title": "Replaceable wildcards by value",
     "without-closure": "Without closure",
     "without-domicile": "Without domicile",
+    "without-groups": "Sin grupo",
     "without-regularization": "Without regularization",
     "without-tax": "Without TAX",
     "without-taxation": "Without taxation",
