--- a/Core/Translation/es_CR.json
+++ b/Core/Translation/es_CR.json
@@ -93,6 +93,7 @@
     "amount-without-discount": "Precio sin descuento",
     "and": "y",
     "any": "Cualquiera",
+    "any-group": "Cualquier grupo",
     "apache-module-not-found": "Módulo de apache no encontrado: %module%",
     "apc-clear": "APC limpiado.",
     "apc-delete-key-item": "Eliminado elemento '%item%' de APC.",
@@ -1218,6 +1219,7 @@
     "recreate-system-integrity": "Volver a crear la integridad del sistema",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tienen una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utilice este formulario para hacer una devolución sobre esta factura.",
+    "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Rectificativa",
     "rectifying-serie": "Serie rectificativa",
     "redirect": "Redirección",
@@ -1591,6 +1593,7 @@
     "wildcard-title": "Comodines reemplazables por valor",
     "without-closure": "Sin el cierre",
     "without-domicile": "Sin domiciliar",
+    "without-groups": "Sin grupo",
     "without-regularization": "Sin regularización",
     "without-tax": "Sin IVA",
     "without-taxation": "Sin impuestos",
