--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -93,6 +93,7 @@
     "amount-without-discount": "Prezioa beherapenik gabe",
     "and": "eta",
     "any": "Edozein",
+    "any-group": "Cualquier grupo",
     "apache-module-not-found": "Apache moduloa ez da aurkitu: %module%",
     "apc-clear": "APC garbitu da.",
     "apc-delete-key-item": "Ezabatu da '%item%' elementua APC-tik.",
@@ -1218,6 +1219,7 @@
     "recreate-system-integrity": "Sistemaren integritatea berriz sortu",
     "rectified-invoice": "Zuzenketa faktura",
     "rectified-invoice-p": "Fakturak dokumentu komertzialak dira eta legezko hainbat muga dituzte. Ezin dira ezabatu edo aldatu. Itzultze osoak edo partzialak onartzen dira soilik. Erabili formulario hau faktura honen itzulketa egiteko.",
+    "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Rectificativa",
     "rectifying-serie": "Serie zuzentzailea",
     "redirect": "Berbideratzea",
@@ -1591,6 +1593,7 @@
     "wildcard-title": "Balio bategatik aldatu daitezken komodinak",
     "without-closure": "Itxierarik gabe",
     "without-domicile": "Helbideratu gabekoak",
+    "without-groups": "Sin grupo",
     "without-regularization": "Erregularizaziorik gabe",
     "without-tax": "BEZ gabe",
     "without-taxation": "Zerga gabe",
