--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -93,6 +93,7 @@
     "amount-without-discount": "Quantité sans remise",
     "and": "et",
     "any": "Tout",
+    "any-group": "Cualquier grupo",
     "apache-module-not-found": "Le module Apache %module% n'a pas été trouvé",
     "apc-clear": "APC effacé.",
     "apc-delete-key-item": "Élément supprimé '%item%' d'APC.",
@@ -1218,6 +1219,7 @@
     "recreate-system-integrity": "Recréer l'intégrité du système",
     "rectified-invoice": "Facture rectifiée",
     "rectified-invoice-p": "Les factures sont des documents commerciaux, et sont soumises à un certain nombre de restrictions légales. Elle ne peuvent être effacées ou modifiées, seul des retour totaux ou partiels sont autorisés. Utilisez ce formulaire pour effectuer un retour de cette facture.",
+    "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Rectificativa",
     "rectifying-serie": "Série des rectificatifs",
     "redirect": "Redirección",
@@ -1591,6 +1593,7 @@
     "wildcard-title": "Caractères de substitution par valeur",
     "without-closure": "Sans clôture",
     "without-domicile": "Non domicilié",
+    "without-groups": "Sin grupo",
     "without-regularization": "Sans régularisation",
     "without-tax": "Sans taxe",
     "without-taxation": "Sans taxation",
