--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -93,6 +93,7 @@
     "amount-without-discount": "Prezo sen desconto",
     "and": "e",
     "any": "Calquera",
+    "any-group": "Cualquier grupo",
     "apache-module-not-found": "Módulo de apache non atopado: %module%",
     "apc-clear": "APC limpo.",
     "apc-delete-key-item": "Eliminouse o elemento '%item%' de APC.",
@@ -1218,6 +1219,7 @@
     "recreate-system-integrity": "Volver crear a integridade do sistema",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "As facturas son documentos mercantís e teñen unha serie de restricións legais. Non se poden eliminar nin modificar. Soamente permítense devolucións totais ou parciais. Utiliza este formulario para facer unha devolución sobre esta factura.",
+    "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Rectificativa",
     "rectifying-serie": "Serie para facturas rectificativas",
     "redirect": "Redirección",
@@ -1591,6 +1593,7 @@
     "wildcard-title": "Comodines reemplazables por valores",
     "without-closure": "Sen o peche",
     "without-domicile": "Sen domiciliar",
+    "without-groups": "Sin grupo",
     "without-regularization": "Sen regularización",
     "without-tax": "Sen impostos",
     "without-taxation": "Sen tributación",
