--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -93,6 +93,7 @@
     "amount-without-discount": "Ammount without discount",
     "and": "and",
     "any": "Qualunque",
+    "any-group": "Cualquier grupo",
     "apache-module-not-found": "apache-module-not-found",
     "apc-clear": "APC cancellato.",
     "apc-delete-key-item": "Elemento eliminato '0' da APC.",
@@ -179,7 +180,7 @@
     "cancel": "Annulla",
     "cancel-data": "Annulla modifiche o operazione",
     "cancelled": "cancelled",
-    "cannot-generate-accounting-entry": "Error al generar el asiento de la factura %invoice%",
+    "cannot-generate-accounting-entry": "Errore durante la generazione della voce fattura %invoice%",
     "cant-assign-date-already-regularized": "Non si può assegnare la data 0 perché esiste già una regolarizzazione di 1 per quel periodo.",
     "cant-assing-subaccount-supplier": "Impossibile associare il subaccount al provider 0",
     "cant-associate-customer-subaccount": "Impossibile associare il subaccount per il client 0",
@@ -1218,6 +1219,7 @@
     "recreate-system-integrity": "Recreate system integrity",
     "rectified-invoice": "rectified-invoice",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
+    "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Rectificativa",
     "rectifying-serie": "rectifying-serie",
     "redirect": "Redirección",
@@ -1591,6 +1593,7 @@
     "wildcard-title": "Replaceable wildcards by value",
     "without-closure": "without-closure",
     "without-domicile": "without-domicile",
+    "without-groups": "Sin grupo",
     "without-regularization": "without-regularization",
     "without-tax": "Senza tasse",
     "without-taxation": "Senza tasse",
