--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -93,6 +93,7 @@
     "amount-without-discount": "preço sem desconto",
     "and": "and",
     "any": "Qualquer",
+    "any-group": "Cualquier grupo",
     "apache-module-not-found": "modulo de apache não encontrado",
     "apc-clear": "APC limpo.",
     "apc-delete-key-item": "Elemento excluído '0' da APC.",
@@ -1218,6 +1219,7 @@
     "recreate-system-integrity": "Recreate system integrity",
     "rectified-invoice": "rectified-invoice",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
+    "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Rectificativa",
     "rectifying-serie": "rectifying-serie",
     "redirect": "Redirección",
@@ -1591,6 +1593,7 @@
     "wildcard-title": "Curingas substituíveis por valor",
     "without-closure": "without-closure",
     "without-domicile": "without-domicile",
+    "without-groups": "Sin grupo",
     "without-regularization": "without-regularization",
     "without-tax": "Sem impostos",
     "without-taxation": "Sem tributação",
