--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -93,6 +93,7 @@
     "amount-without-discount": "Preu sense desconte",
     "and": "i",
     "any": "Qualsevol",
+    "any-group": "Cualquier grupo",
     "apache-module-not-found": "No s'ha trobat el mòdul d'apache %module%",
     "apc-clear": "APC netejat.",
     "apc-delete-key-item": "L'element '%item%' s'ha borrat de la APC.",
@@ -1218,6 +1219,7 @@
     "recreate-system-integrity": "Tornar a crear l'integritat del sistema",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
+    "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Rectificativa",
     "rectifying-serie": "Sèrie rectificativa",
     "redirect": "Redirección",
@@ -1591,6 +1593,7 @@
     "wildcard-title": "Comodins reemplaçables per valor",
     "without-closure": "Sense el tancament",
     "without-domicile": "Sense domiciliar",
+    "without-groups": "Sin grupo",
     "without-regularization": "Sense regularització",
     "without-tax": "Sense IVA",
     "without-taxation": "Sense imposts",
