--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -93,6 +93,7 @@
     "amount-without-discount": "Preu sense descompte",
     "and": "i",
     "any": "Qualsevol",
+    "any-group": "Cualquier grupo",
     "apache-module-not-found": "Mòdul d'apache no trobat: %module%",
     "apc-clear": "APC netejat.",
     "apc-delete-key-item": "Eliminat element '%item%' d'APC.",
@@ -1218,6 +1219,7 @@
     "recreate-system-integrity": "Tornar a crear la integritat del sistema",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "Les factures són documents mercantils i tenen una sèrie de restriccions legals. No es poden eliminar ni modificar. Només es permeten devolucions totals o parcials. Utilitza aquest formulari per fer una devolució sobre aquesta factura.",
+    "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Rectificativa",
     "rectifying-serie": "Sèrie rectificativa",
     "redirect": "Redirecció",
@@ -1591,6 +1593,7 @@
     "wildcard-title": "Comodins reemplaçables per valor",
     "without-closure": "Sense el tancament",
     "without-domicile": "Sense domiciliar",
+    "without-groups": "Sin grupo",
     "without-regularization": "Sense regularització",
     "without-tax": "Sense IVA",
     "without-taxation": "Sense impostos",
