Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -334,6 +334,7 @@
     "crons": "Crons",
     "currency": "Moneda",
     "currency-position": "Posició símbol de divisa",
+    "current-quarter": "Trimestre actual",
     "current-risk": "Risc actual",
     "customer": "Client",
     "customer-account-not-found": "Subcompte del client no trobada",
@@ -1150,6 +1151,7 @@
     "previous": "Anterior",
     "previous-balance": "Balanç anterior",
     "previous-documents": "Documents previs",
+    "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprat anteriorment al proveïdor",
     "previously-sold-to-customer": "Venut anteriorment al client",
     "price": "Preu",
