--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -334,6 +334,7 @@
     "crons": "Crons",
     "currency": "Währung",
     "currency-position": "Position Währungszeichen",
+    "current-quarter": "Trimestre actual",
     "current-risk": "aktuelles Risiko",
     "customer": "Kunde",
     "customer-account-not-found": "Unterkonto des Kunden nicht gefunden",
@@ -1150,6 +1151,7 @@
     "previous": "vorherige",
     "previous-balance": "Previous Balance",
     "previous-documents": "vorherige Dokumente",
+    "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Preis",
