--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -334,6 +334,7 @@
     "crons": "Crons",
     "currency": "Currency",
     "currency-position": "Currency position",
+    "current-quarter": "Trimestre actual",
     "current-risk": "Current risk",
     "customer": "Customer",
     "customer-account-not-found": "Customer account not found",
@@ -1150,6 +1151,7 @@
     "previous": "Previous",
     "previous-balance": "Previous Balance",
     "previous-documents": "Previous documents",
+    "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Previously purchased from supplier",
     "previously-sold-to-customer": "Previously purchased to customer",
     "price": "Price",
