--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -334,6 +334,7 @@
     "crons": "Crons",
     "currency": "Divisa",
     "currency-position": "Posición del símbolo de divisa",
+    "current-quarter": "Trimestre actual",
     "current-risk": "Riesgo actual",
     "customer": "Cliente",
     "customer-account-not-found": "Subcuenta del cliente no encontrada",
@@ -1150,6 +1151,7 @@
     "previous": "Anterior",
     "previous-balance": "Balance anterior",
     "previous-documents": "Documentos previos",
+    "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Precio",
