--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -334,6 +334,7 @@
     "crons": "Crons",
     "currency": "Dibisa",
     "currency-position": "Moneta sinboloaren posizioa",
+    "current-quarter": "Trimestre actual",
     "current-risk": "Oraingo arriskua",
     "customer": "Bezeroa",
     "customer-account-not-found": "Bezeroaren azpikontua ez da aurkitu",
@@ -1150,6 +1151,7 @@
     "previous": "Aurrekoa",
     "previous-balance": "Aurreko balantzea",
     "previous-documents": "Aurretiko dokumentuak",
+    "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Aurretik hornitzaileari erosia",
     "previously-sold-to-customer": "Aurretik bezeroari salduta",
     "price": "Prezioa",
