--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -334,6 +334,7 @@
     "crons": "Crons",
     "currency": "Devise",
     "currency-position": "Position du symbole de la devise",
+    "current-quarter": "Trimestre actual",
     "current-risk": "Risque actuel",
     "customer": "Client",
     "customer-account-not-found": "Le compte client n'a pas été trouvé",
@@ -1150,6 +1151,7 @@
     "previous": "précédent",
     "previous-balance": "Solde précédent",
     "previous-documents": "Documents précédents",
+    "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Prix",
