--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -334,6 +334,7 @@
     "crons": "Crons",
     "currency": "Moeda",
     "currency-position": "Posición do símbolo de moeda",
+    "current-quarter": "Trimestre actual",
     "current-risk": "Risco actual",
     "customer": "Cliente",
     "customer-account-not-found": "Subconta do cliente non atopada",
@@ -1150,6 +1151,7 @@
     "previous": "Anterior",
     "previous-balance": "Balance anterior",
     "previous-documents": "Documentos previos",
+    "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprado anteriormente ao provedor",
     "previously-sold-to-customer": "Vendido anteriormente ao cliente",
     "price": "Prezo",
