--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -334,6 +334,7 @@
     "crons": "Crons",
     "currency": "Divisa",
     "currency-position": "Posición símbolo de divisa",
+    "current-quarter": "Trimestre actual",
     "current-risk": "Riesgo actual",
     "customer": "Cliente",
     "customer-account-not-found": "Subcuenta del cliente no encontrada",
@@ -1002,7 +1003,6 @@
     "no-stock": "No controlar stock",
     "non-editable-accounting-entry": "Asiento no editable",
     "non-editable-columns": "Columnas no editables: %columns%",
-    "non-editable-default-not-allowed": "Un estado predeterminado y no editable no esta permitido.",
     "non-editable-document": "Documento no editable",
     "none": "Ninguno",
     "normal": "Normal",
@@ -1151,6 +1151,7 @@
     "previous": "Anterior",
     "previous-balance": "Balance anterior",
     "previous-documents": "Documentos previos",
+    "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Precio",
