--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -334,6 +334,7 @@
     "crons": "Crons",
     "currency": "Moneta",
     "currency-position": "Currency position",
+    "current-quarter": "Trimestre actual",
     "current-risk": "current-risk",
     "customer": "Cliente",
     "customer-account-not-found": "Account cliente non trovato",
@@ -1150,6 +1151,7 @@
     "previous": "precedente",
     "previous-balance": "Previous Balance",
     "previous-documents": "previous-documents",
+    "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Prezzo",
