--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -334,6 +334,7 @@
     "crons": "Crons",
     "currency": "Moeda",
     "currency-position": "Currency position",
+    "current-quarter": "Trimestre actual",
     "current-risk": "current-risk",
     "customer": "Cliente",
     "customer-account-not-found": "customer-account-not-found",
@@ -1150,6 +1151,7 @@
     "previous": "Anterior",
     "previous-balance": "Balanço anterior",
     "previous-documents": "previous-documents",
+    "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Preço",
