--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -334,6 +334,7 @@
     "crons": "Crons",
     "currency": "Moneda",
     "currency-position": "Posició del símbol de la moneda",
+    "current-quarter": "Trimestre actual",
     "current-risk": "Risc actual",
     "customer": "Client",
     "customer-account-not-found": "El subconte del cliente no s'ha trobat",
@@ -1150,6 +1151,7 @@
     "previous": "Anterior",
     "previous-balance": "Balanç anterior",
     "previous-documents": "Documents previs",
+    "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Preu",
