--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1423,6 +1423,7 @@
     "supplier-delivery-notes": "Albarans de proveïdor",
     "supplier-estimation": "Pressupost de Proveïdor",
     "supplier-estimations": "Estimacions del proveïdor",
+    "supplier-have-no-iban": "El proveïdor %%supplier no té IBAN (compte bancari)",
     "supplier-invoice": "Factura de Proveïdor",
     "supplier-invoice-deleted-successfully": "S'ha eliminat correctament la factura de compra %docCode%.",
     "supplier-invoices": "Factures de proveïdor",
