Añadidos títulos a las columnas con ordenación, para informar de que se ordenará por esa columna.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -93,7 +93,7 @@
     "amount-without-discount": "Preu sense descompte",
     "and": "i",
     "any": "Qualsevol",
-    "any-group": "Cualquier grupo",
+    "any-group": "Qualsevol grup",
     "apache-module-not-found": "Mòdul d'apache no trobat: %module%",
     "apc-clear": "APC netejat.",
     "apc-delete-key-item": "Eliminat element '%item%' d'APC.",
@@ -1221,7 +1221,7 @@
     "recreate-system-integrity": "Tornar a crear la integritat del sistema",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "Les factures són documents mercantils i tenen una sèrie de restriccions legals. No es poden eliminar ni modificar. Només es permeten devolucions totals o parcials. Utilitza aquest formulari per fer una devolució sobre aquesta factura.",
-    "rectified-invoices": "Facturas rectificativas",
+    "rectified-invoices": "Factures rectificatives",
     "rectifying": "Rectificativa",
     "rectifying-serie": "Sèrie rectificativa",
     "redirect": "Redirecció",
@@ -1361,10 +1361,13 @@
     "soap-extension-not-installed": "L'extensió SOAP no està activada al PHP. Contacta amb el teu proveïdor de hosting per activar-la.",
     "social-security-number": "Nombre Seguretat Social",
     "sort": "Ordre",
+    "sort-by-column": "Ordenar por columna",
     "sort-by-date-asc": "Ordenar per data desc.",
     "sort-by-date-desc": "Ordenar per data desc",
     "sort-by-ref-asc": "Ordenar per referència asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
+    "sorted-asc": "Ordenado ascendente",
+    "sorted-desc": "Ordenado descendente",
     "source": "Font",
     "source-code": "Codi font",
     "special-account": "Compte especial",
@@ -1596,7 +1599,7 @@
     "wildcard-title": "Comodins reemplaçables per valor",
     "without-closure": "Sense el tancament",
     "without-domicile": "Sense domiciliar",
-    "without-groups": "Sin grupo",
+    "without-groups": "Sense grup",
     "without-regularization": "Sense regularització",
     "without-tax": "Sense IVA",
     "without-taxation": "Sense impostos",
