--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1361,10 +1361,13 @@
     "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
     "social-security-number": "Social Security number",
     "sort": "Order",
+    "sort-by-column": "Ordenar por columna",
     "sort-by-date-asc": "Ordenar por fecha desc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
+    "sorted-asc": "Ordenado ascendente",
+    "sorted-desc": "Ordenado descendente",
     "source": "Fuente",
     "source-code": "Source code",
     "special-account": "Sonderkonto",
