--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -93,7 +93,7 @@
     "amount-without-discount": "Prezo sen desconto",
     "and": "e",
     "any": "Calquera",
-    "any-group": "Cualquier grupo",
+    "any-group": "Calquera grupo",
     "apache-module-not-found": "Módulo de apache non atopado: %module%",
     "apc-clear": "APC limpo.",
     "apc-delete-key-item": "Eliminouse o elemento '%item%' de APC.",
@@ -1361,10 +1361,13 @@
     "soap-extension-not-installed": "A extensión SOAP non está activada en PHP. Contacta co teu provedor de hosting para activala.",
     "social-security-number": "Número Seguridade Social",
     "sort": "Orde",
+    "sort-by-column": "Ordenar por columna",
     "sort-by-date-asc": "Ordear por data asc.",
     "sort-by-date-desc": "Ordear por data desc.",
     "sort-by-ref-asc": "Ordear por referencia asc.",
     "sort-by-ref-desc": "Ordear por referencia desc.",
+    "sorted-asc": "Ordenado ascendente",
+    "sorted-desc": "Ordenado descendente",
     "source": "Fonte",
     "source-code": "Código fonte",
     "special-account": "Conta especial",
@@ -1596,7 +1599,7 @@
     "wildcard-title": "Comodines reemplazables por valores",
     "without-closure": "Sen o peche",
     "without-domicile": "Sen domiciliar",
-    "without-groups": "Sin grupo",
+    "without-groups": "Sen grupo",
     "without-regularization": "Sen regularización",
     "without-tax": "Sen impostos",
     "without-taxation": "Sen tributación",
