--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -93,7 +93,7 @@
     "amount-without-discount": "Ammount without discount",
     "and": "and",
     "any": "Qualunque",
-    "any-group": "Cualquier grupo",
+    "any-group": "Qualsiasi gruppo",
     "apache-module-not-found": "apache-module-not-found",
     "apc-clear": "APC cancellato.",
     "apc-delete-key-item": "Elemento eliminato '0' da APC.",
@@ -334,7 +334,7 @@
     "crons": "Crons",
     "currency": "Moneta",
     "currency-position": "Currency position",
-    "current-quarter": "Trimestre actual",
+    "current-quarter": "Trimestre attuale",
     "current-risk": "current-risk",
     "customer": "Cliente",
     "customer-account-not-found": "Account cliente non trovato",
@@ -1151,7 +1151,7 @@
     "previous": "precedente",
     "previous-balance": "Previous Balance",
     "previous-documents": "previous-documents",
-    "previous-quarter": "Trimestre anterior",
+    "previous-quarter": "Trimestre precedente",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Prezzo",
@@ -1221,7 +1221,7 @@
     "recreate-system-integrity": "Recreate system integrity",
     "rectified-invoice": "rectified-invoice",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
-    "rectified-invoices": "Facturas rectificativas",
+    "rectified-invoices": "Fatture correttive",
     "rectifying": "Rectificativa",
     "rectifying-serie": "rectifying-serie",
     "redirect": "Redirección",
@@ -1361,10 +1361,13 @@
     "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
     "social-security-number": "Social Security number",
     "sort": "Order",
+    "sort-by-column": "Ordenar por columna",
     "sort-by-date-asc": "Ordenar por fecha desc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
+    "sorted-asc": "Ordenado ascendente",
+    "sorted-desc": "Ordenado descendente",
     "source": "Fuente",
     "source-code": "Source code",
     "special-account": "Conto speciale",
@@ -1596,7 +1599,7 @@
     "wildcard-title": "Replaceable wildcards by value",
     "without-closure": "without-closure",
     "without-domicile": "without-domicile",
-    "without-groups": "Sin grupo",
+    "without-groups": "Senza gruppo",
     "without-regularization": "without-regularization",
     "without-tax": "Senza tasse",
     "without-taxation": "Senza tasse",
