--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1361,10 +1361,13 @@
     "soap-extension-not-installed": "The SOAP extension is not enabled in PHP. Contact your hosting provider to activate it.",
     "social-security-number": "Social Security number",
     "sort": "Order",
+    "sort-by-column": "Ordenar por columna",
     "sort-by-date-asc": "Sort by date asc.",
     "sort-by-date-desc": "Sort by date desc.",
     "sort-by-ref-asc": "Sort by reference asc.",
     "sort-by-ref-desc": "Sort by reference desc.",
+    "sorted-asc": "Ordenado ascendente",
+    "sorted-desc": "Ordenado descendente",
     "source": "Fuente",
     "source-code": "Source code",
     "special-account": "Special account",
