--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1361,13 +1361,13 @@
     "soap-extension-not-installed": "A extensión SOAP non está activada en PHP. Contacta co teu provedor de hosting para activala.",
     "social-security-number": "Número Seguridade Social",
     "sort": "Orde",
-    "sort-by-column": "Ordenar por columna",
+    "sort-by-column": "Ordear por columna",
     "sort-by-date-asc": "Ordear por data asc.",
     "sort-by-date-desc": "Ordear por data desc.",
     "sort-by-ref-asc": "Ordear por referencia asc.",
     "sort-by-ref-desc": "Ordear por referencia desc.",
-    "sorted-asc": "Ordenado ascendente",
-    "sorted-desc": "Ordenado descendente",
+    "sorted-asc": "Ordeado ascendente",
+    "sorted-desc": "Ordeado descendente",
     "source": "Fonte",
     "source-code": "Código fonte",
     "special-account": "Conta especial",
